--- a/example2.html
+++ b/example2.html
@@ -4,5 +4,80 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css">
   </head>
   <body>
+  	<nav class="navbar navbar-dark bg-danger">
+
+      <a class="navbar-brand m-l-3" href="#"> <img src="http://cdn.mysitemyway.com/etc-mysitemyway/icons/legacy-previews/icons/ultra-glossy-silver-buttons-icons-sports-hobbies/048274-ultra-glossy-silver-button-icon-sports-hobbies-people-ballet-dancer.png" style="width:50px;height:50px"> </a>
+
+      <ul class="nav navbar-nav">
+
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="#">Our Faculty</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Class Schedule</a>
+        </li>
+      </ul>
+    </nav> 
+    <img src="dancers.jpg" style="width:100%;height75%">
+
+    <div class="card-img-overlay">
+    	<div class="banner">
+    		<br>
+    		<br>
+    		<br>
+    		<br>
+    		<br>
+    		<br>
+    		<br>
+    		<br>
+    		<br>
+  			<div class="card-block">
+  				<div class="col-md-3">
+    			<h3 class="card-title">Past videos</h3>
+    			<p class="card-text">click on the following button to take you to our gallery of dance performances.</p>
+    			<div class "button">
+     			<a href="#" class="btn btn-danger">Gallery</a>
+            </div>
+         </div>
+     </div>
+ </div>
+ </div>
+  	 <div class="col-md-5">
+          <div class="card card-default">
+            <div class="card-body">
+              <div class="container">
+                <br>
+            <h3>Want more info?</h3>
+            <div class="input-group" style="width: 100%">
+      			<div class="col-sm-10">
+        			<input type="text" class="form-control" placeholder="Name"/>
+     			</div>
+   			</div>
+   			<br>
+   			<div class="input-group" style="width: 100%">
+   				<div class="col-sm-10">
+   					<input type="text" class="form-control" placeholder="Email"/>
+   				</div>
+   			</div>
+   			<br>
+   			<div class="col-sm-8">
+            	<button class="btn btn-danger"> Submit</button>
+        	 </div>
+   		    </div>
+            <br>
+            </div>
+           </div>
+          </div>
+         </div> 
+         <div class="col-md-5">
+         	<br>
+         	<br>
+         	<h2>Are you interested in amazing dance training?</h2>
+          <p>Here at our dance studio we have many talented instructors who are here to make sure that your son or daughter get the best training in Texas. From Broadway, to the Rockettes to American City Ballet, our faculty has been around the world. </p>
+      </div>
   </body>
 </html>
