--- a/example3.html
+++ b/example3.html
@@ -1,9 +1,156 @@
 <html>
   <head>
-    <title>Customized Bootstrap Screenshot</title>
+    <title>Standard Bootstrap Screenshot</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-  	<button class="btn btn-primary">I'm a button</button>
+  <div>
+    <nav class="navbar navbar-light bg-faded">
+      <div class="container">
+      <a class="navbar-brand" href="#">CSE3345</a>
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Home </a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Assignments <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Lectuers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <li class="nav-item pull-*-right" style="float: right;"> 
+          <a class="nav-link" href="#">Logout</a>
+        </li>
+        <li class="nav-item pull-*-right" style="float: right;"> 
+          <a class="nav-link" href="#">Account</a>
+        </li>
+      </ul>
+    </nav>
+  <div class="container">
+      <br>
+      <div class="row">
+        <div class="col-sm-4 col-md-3 sidebar">
+          <div class="card">
+            <div class="card-header">Your Assignments
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-success">Assignment #1
+                  <span class="label label-pill label-success" style="float: right;">92 </span>
+                </li> 
+                <li class="list-group-item list-group-item-success">Assignment #2
+                  <span class="label label-pill label-success" style="float: right;">100 </span>
+                </li>
+                <li class="list-group-item list-group-item-warning">Assignment #3
+                  <span class="label label-pill label-warning" style="float: right;">74 </span>
+                </li>
+                <li class="list-group-item list-group-item-danger">Assignment #4
+                  <span class="label label-pill label-danger" style="float: right;">23 </span>
+                </li>
+                <li class="list-group-item list-group-item-success">Assignment #6
+                  <span class="label label-pill label-success" style="float: right;">95 </span> 
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-8 col-md-9">
+          <h1>Assignment 1</h1>
+        <p>Aenean lacinia bibendum nulla sed consectetur.</p>
+          <div class="alert alert-success" role="alert">
+            <strong>Well done!</strong> You got a 92 on this assignment.
+          </div>
+            <h1>Grading Rubric</h1>
+          <table class="table">
+            <thead>
+              <tr>
+              <th>#</th>
+              <th>Description</th>
+              <th>Available Points</th>
+              <th>Your Points</th>
+           </tr>
+          </thead>
+            <tbody>
+            <tr>
+            <th scope="row">1</th>
+             <td>Sed posuere consectetur est at lobortis.</td>
+             <td>40</td>
+             <td>40</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Donec id elit non mi porta gravida at eget metus.</td>
+            <td>40</td>
+            <td>40</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</td>
+            <td>20</td>
+            <td>12</td>
+          </tr>
+            <tr class="table-active">
+              <td>
+              </td>
+              <td> <p class="text-xs-right" ><strong> Total </strong> </p>
+              </td>
+              <td>20</td> 
+              <td>12</td>
+            </tr> 
+        </tbody>
+      </table>
+        </div>
+      </div>
+    <div class="row">
+        <div class="col-md-3">
+          <h2></h2>
+          <p> </p>
+        </div>
+        <div class="col-md-5">
+          <h2>Comments</h2>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna. Cras mattis consectetur purus sit amet fermentum. Sed posuere consectetur est at lobortis. Donec sed odio dui. Maecenas faucibus mollis interdum. </p>
+       </div>
+       <div class="col-md-4">
+          <div class="card card-default">
+            <div class="card-body">
+              <div class="container">
+                <br>
+            <h2>Get Bonus Points</h2>
+            <p>Aenean eu leo quam. Pellentesqye ornare sem lainia quam veneatis vestibulum. Lorem ipsum dolor sit amet, consectetur adpiscing elit.</p>
+            <button class="btn btn-primary"> Start Bonus Exercise</button>
+            <br>
+            </div>
+          </div>
+        </div>
+        </div> 
+      </div>
+      </div class="row">
+      <div class="col-lg-8" style="float:right; margin-right: 6%">
+    <h2> Dispute Grade</h2>
+    <div class="input-group" style="width: 100%">
+      <label for="inputType" class="col-sm-3 control-label">Complaint</label>
+      <div class="col-sm-8">
+        <input type="text" class="form-control" placeholder="Your Complaint" />
+      </div>
+    </div>
+      <br>
+    <div class="input-group" style="width: 100%">
+      <label for="inputType" class="col-sm-3 control-label">Reason</label>
+      <div class="col-sm-8">
+        <input type="text" class="form-control" placeholder="Your Reason" /> 
+        <button class="btn btn-primary"> Submit</button>
+      </div>
+    </div>
+    
+    </div>
+      </div>
+      <br>
+    </div>
+    </div>
+    </div>
+    </div>
   </body>
 </html>
